--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html>
-<head> Atividade 5 </head>
-
-<body>
-    <P> Lista ordenada: </p>
-    <ol>
-        <li> item um</li>
-        <li> item dois</li>
-        <li> item três</li>
-        <li> item quatro</li>
-        <li>...</li>
-    </ol>
-    <p> Lista não ordernada:</p>
-    <ul>
-        <li> item um</li>
-        <li> item dois</li>
-        <li> item três</li>
-        <li> item quatro</li>
-        <li>...</li>
-    </ul>
-</body>
+<html>  
+    <head>
+        <title>Atividade 5</title>
+    </head>
+    <body>
+        <p>Lista ordenada:</p>
+        <ol>
+            <li>Item um</li>
+            <li>Item dois</li>
+            <li>Item três</li>
+            <li>Item quatro</li>
+            <li>...</li>
+        </ol>
+        <p>Lista não-ordenada</p>
+        <ul>
+            <li>Item um</li>
+            <li>Item dois</li>
+            <li>Item três</li>
+            <li>Item quatro</li>
+            <li>...</li>
+        </ul>
+    </body>
 </html>
